syntax = "proto3";

package app.simplecloud.droplet.player.proto;

option java_package = "app.simplecloud.droplet.player.proto";
option java_multiple_files = true;

import "user_droplet_api.proto";

message SendMessageEvent {
  string uniqueId = 1;
  AdventureComponent message = 2;
}